objects/Account_Plan_History__c.object
<CustomObject>
    <fields>
        <fullName>Account_Plan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Plan</label>
        <referenceTo>Account_Plan__c</referenceTo>
        <relationshipName>Account_Plan_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Action__c</fullName>
        <formula>CASE(Field__c, "Status", "Changed Status from " &amp; Old_Value__c &amp;" to " &amp; New_Value__c,
"created", "Created",
"closed", "Closed",
"Changed " &amp; Field__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Action</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <formula>CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Field__c</fullName>
        <label>Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Value__c</fullName>
        <label>New Value</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Old_Value__c</fullName>
        <label>Old Value</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Account_Plan_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>zzAccount Plan History</label>
    <nameField>
        <label>Account Plan History</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Account Plan History</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>